[project]
name = "engram"
version = "0.1.0"
description = "Lightweight memory system for conversational agents"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2", "numpy>=1.24"]
dev = ["pytest>=7.0"]

[project.scripts]
engram = "engram.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
